--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 }
-a{
-    color:#fff;
+
+a {
+    color: #fff;
     text-decoration: none;
-    transition:0.3s;
+    transition: 0.3s;
 }
-a:hover{
+
+a:hover {
     opacity: 0.7;
 }
-header{
-    position: center
+
+header {
+    position: center;
     ;
 
 }
-.logo{
+
+.logo {
     font-size: 24px;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -28,69 +33,197 @@ nav{
     background-color: #262626;
     height: 8vh;
 }
-main{
-    background: url("img/background.jpg") no-repeat center center;
-    background-size:cover;
+
+main {
+    background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgb(33, 50, 117));
+    background-size: cover;
+    background-size: cover;
     height: 92vh;
+    
 }
-.nav-list{
-    list-style:none;
-    display:flex;
+
+#avatarhome {
+    display: flex;
+    flex-direction: column;
+    /* background-image: url(https://img.freepik.com/fotos-premium/codigo-de-script-de-computador-abstrato-tela-de-codigo-de-programacao-do-desenvolvedor-de-software-tempo-de-trabalho-da-programacao-de-software-texto-do-codigo-escrito-e-criado-inteiramente-por-mim_372999-2438.jpg?w=1380); */
+    position: absolute;
+    width: 1387px;
+    margin: 0 auto;
+    max-width: 1887px;
+    max-height: 2960px;
+    height: 296px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 126px;
+
+    background: #1E1D1D;
+    border-radius: 20px;
 }
-.nav-list li{
+
+#avatarhome img {
+
+    position: absolute;
+    width: 276px;
+    height: 250px;
+    left: 54px;
+    top: 13px;
+
+    background: #D9D9D9;
+    border-radius: 125px;
+    z-index: 1;
+}
+
+#avatarhome h1 {
+    font-family: 'Fira Code', monospace;
+    position: absolute;
+    top: 100px;
+    display: inline;
+    left: 30%;
+    color: #fff;
+    z-index: 2;
+}
+
+#avatarhome h2 {
+    font-family: 'Fira Code', monospace;
+    position: absolute;
+    top: 150px;
+    display: inline;
+    left: 30%;
+    color: #fff;
+    font-size: medium;
+
+    z-index: 2;
+}
+
+#avatarhome h1:after {
+    content: "|";
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+
+}
+
+@keyframes pisca {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+}
+
+
+.nav-list {
+    list-style: none;
+    display: flex;
+}
+
+.nav-list li {
     letter-spacing: 3px;
     margin-left: 32px;
 }
-.mobile-menu{
+
+.mobile-menu {
     cursor: pointer;
-    display:none;
+    display: none;
 }
-.mobile-menu div{
+
+.mobile-menu div {
     width: 32px;
-    height:2px;
+    height: 2px;
     background: #fff;
-    margin:8px;
+    margin: 8px;
     border-radius: 10%;
 }
 
-@media(max-width:999px){
-    body{
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #262626;
+    height: 15vh;
+    position: relative;
+    /* adiciona position relative para posicionar o selo */
+}
+
+#selo img {
+    position: absolute;
+    width: 90px;
+    height: 80px;
+    top: 20px;
+    left: 20px;
+}
+
+/* Responsividade arrumar dps*/
+@media(max-width:999px) {
+
+    /* #avatarhome img {
+        padding: 20px;
+        max-width: 200px;
+        max-height: 150px;
+        border-radius: 50%;
+      }
+      
+      #avatarhome h1 {
+        font-size: 20px;
+        top: 10vh;
+        left: 50%;
+        transform: translateX(100%);
+    } */
+    body {
         overflow-x: hidden;
     }
-    .nav-list{
-        position:absolute;
+
+    main {
+        position: relative;
+        z-index: 0;
+    }
+
+    .nav-list {
+        position: absolute;
         top: 8vh;
-        right:0;
+        right: 0;
         width: 50vw;
-        height:92vh;
-        background-color: #262626; 
+        height: 92vh;
+        background-color: #262626;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
         transform: translateX(100%);
-        transition:transform 0.3s ease-in;
+        transition: transform 0.3s ease-in;
 
     }
-    .nav-list li{
-        margin-left:0;
+
+    .nav-list li {
+        margin-left: 0;
         opacity: 0;
     }
-    .mobile-menu{
+
+    .mobile-menu {
         right: 0;
         display: block;
+        z-index: 100;
     }
-    .nav-list.active{
+
+    .nav-list.active {
         display: flex;
-        transform:translateX(0);
+        transform: translateX(0);
+        z-index: 1;
     }
-    @keyframes navLinkFade{
-        from{
+
+    @keyframes navLinkFade {
+        from {
             opacity: 0;
             transform: translate(50px);
         }
-        to{
+
+        to {
             opacity: 1;
-            transform:translateX(0);
+            transform: translateX(0);
         }
     }
 }
